--- a/gr1-weaken.opam
+++ b/gr1-weaken.opam
@@ -14,7 +14,7 @@ depends: [
   "ocaml"
   "why3" {>= "1.8.0"}
   "core" {>= "0.17.0"}
-  "core-unix" {>= "0.17.0"}
+  "core_unix" {>= "0.17.0"}
   "odoc" {with-doc}
 ]
 build: [
