--- a/test/dune
+++ b/test/dune
@@ -1,13 +1,13 @@
 (library
- (name test_gr1)
+ (name test_ltl)
  (modules
-  test_gr1
+  test_ltl
   test_smv_parser
   test_tlsf_parser
   test_cex
   test_lasso
   test_eval)
- (libraries gr1_weaken core why3)
+ (libraries ltl_weaken core why3)
  (inline_tests)
  (preprocess
   (pps ppx_jane)))
