feat: Parse LTLSPEC from SMV files

--- a/test/dune
+++ b/test/dune
@@ -1,6 +1,12 @@
 (library
  (name test_ltl)
- (modules test_ltl_parser test_cex test_lasso test_eval test_ltl)
+ (modules
+  test_ltl_parser
+  test_cex
+  test_lasso
+  test_eval
+  test_ltl
+  test_parse_smv)
  (libraries ltl_weaken core why3)
  (inline_tests)
  (preprocess
